# backend/internal/models/task.go
@@ -9,6 +9,9 @@ type Task struct {
 	Description   string    `db:"description" json:"description"`
 	HoursInterval *int      `db:"hours_interval" json:"hours_interval,omitempty"`
 	MonthsInterval *int     `db:"months_interval" json:"months_interval,omitempty"`
+	DueStatus     string    `json:"due_status,omitempty"`
+	NextDueDate   string    `json:"next_due_date,omitempty"`
+	NextDueHours  *float64  `json:"next_due_hours,omitempty"`
 	CreatedAt     time.Time `db:"created_at" json:"created_at"`
 	UpdatedAt     time.Time `db:"updated_at" json:"updated_at"`
 }
